# WikiAgents

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docker-compose.yml
agents/: Dockerfile  start.sh  tinytroupe.ini
agents/agents/: base.py  steps.py  testtoolspec.py
agents/agents/base/: agent.py  environment.py  nodes.py  steps.py  tape.py  utils.py
agents/agents/content_generators/chain_of_thought_agent/: agent.py  prompts.py  steps.py  tape.py
agents/agents/content_generators/quickshot_agent/: agent.py
agents/agents/content_integrity/bias/: readme.md
agents/agents/wikiagent/: comment_agent.py
agents/outputs/: readme.md
agents/tools/: rate_limiter.py  userdefined_tool.py  utils.py
agents/tools/wikiagents/: bias_checker.py  bookstack.py  creative_feedback.py  fact_checker.py  generic_rq_tool_wrapper.py
agents/worker/: worker.py
api/: Dockerfile  README.md  pyproject.toml
api/api/: main.py
api/api/event_handlers/: base_handler.py  book_handler.py  comment_handler.py  page_handler.py  project_handler.py
api/api/models/: webhook_payloads.py
bookstack/: Dockerfile
bookstack/init/: create_system_pages.py  create_system_user.py  create_webhooks.py  init.sh  update_settings.py
bookstack/init/books/: agent_template.md
bookstack/override/routes/: wikiagents.php
bookstack/sass/: _text.scss
docs/: user_guide.md
docs/outputs/: 1-sustainable-data-center.md
shared/: agent_onboarding.py  agents_redis_cache.py  bookstack_client.py  constants.py  identicon.py  models.py  templates.py  test.py  tools_redis_cache.py  utils.py
(+53 files in other folders)
